--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -273,7 +273,20 @@ $icon-font-path: '../fonts/';
     position: absolute;
     top: 10%;
     left: 10%;
-    width: 20em;
+    height: 2em;
+    opacity: 0;
+    @include transition(opacity 1s ease-in-out);
+  }
+  .narrator-logo-show {
+    opacity: 1;
+  }
+
+  .narrator-logo-small {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    height: 2em;
+    width: 2.4em;
   }
 
   .wrapper {
@@ -310,26 +323,34 @@ $icon-font-path: '../fonts/';
     float: right;
   }
 
-  //-------------------------------------
-  // section-contact
-  //-------------------------------------
-  #section-contact {
+  %section {
     position: fixed;
     z-index: 1;
     width: 100%;
     bottom: 0px;
   }
 
-  #section-contact-child {
-    @include flex-container;
-
+  %section-child {
     position: fixed;
     top: 1000px;
     left: 50%;
-    margin-left: -37.5%;
+    margin-left: -45%;
     opacity: 0;
-    width: 75%;
+    width: 90%;
     height: 400px;
+  }
+
+  //-------------------------------------
+  // section-contact
+  //-------------------------------------
+  #section-contact {
+    @extend %section;
+  }
+
+  #section-contact-child {
+    @include flex-container;
+
+    @extend %section-child;
     text-align: left;
 
     #contact-right {
@@ -399,20 +420,11 @@ $icon-font-path: '../fonts/';
   // section-story-type
   //-------------------------------------
   #section-story-type {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    bottom: 0px;
+    @extend %section;
   }
 
   #section-story-type-child {
-    position: fixed;
-    top: 1000px;
-    left: 50%;
-    margin-left: -37.5%;
-    opacity: 0;
-    width: 75%;
-    height: 400px;
+    @extend %section-child;
     text-align: center;
 
     #section-story-type-header {
@@ -460,22 +472,13 @@ $icon-font-path: '../fonts/';
   // section-workshop
   //-------------------------------------
   #section-workshop {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    bottom: 0px;
+    @extend %section;
   }
 
   #section-workshop-child {
     @include flex-container;
 
-    position: fixed;
-    top: 1000px;
-    left: 50%;
-    margin-left: -37.5%;
-    opacity: 0;
-    width: 75%;
-    height: 400px;
+    @extend %section-child;
     text-align: left;
 
     #work-right {
@@ -530,20 +533,11 @@ $icon-font-path: '../fonts/';
   // section-work
   //-------------------------------------
   #section-work {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    bottom: 0px;
+    @extend %section;
   }
 
   #section-work-child {
-    position: fixed;
-    top: 1000px;
-    left: 50%;
-    margin-left: -37.5%;
-    opacity: 0;
-    width: 75%;
-    height: 400px;
+    @extend %section-child;
     text-align: left;
 
     @include flex-container;
@@ -630,20 +624,11 @@ $icon-font-path: '../fonts/';
   // section-approach
   //-------------------------------------
   #section-approach {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    bottom: 0px;
+    @extend %section;
   }
 
   #section-approach-child {
-    position: fixed;
-    top: 1000px;
-    left: 50%;
-    margin-left: -37.5%;
-    opacity: 0;
-    width: 75%;
-    height: 400px;
+    @extend %section-child;
     text-align: left;
 
     h1 {
@@ -682,20 +667,11 @@ $icon-font-path: '../fonts/';
   // section-about
   //-------------------------------------
   #section-about {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    bottom: 0px;
+    @extend %section;
   }
 
   #section-about-child {
-    position: fixed;
-    top: 1000px;
-    left: 50%;
-    margin-left: -37.5%;
-    opacity: 0;
-    width: 75%;
-    height: 400px;
+    @extend %section-child;
     text-align: center;
 
     h1 {
@@ -755,7 +731,7 @@ $icon-font-path: '../fonts/';
     @extend .wrapper;
 
     position: absolute;
-    bottom: 70%;
+    bottom: 60%;
     right: 0%;
     margin-left: -30em;
     width: 100%;
