--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -174,6 +174,10 @@ $icon-font-path: '../fonts/';
   /*======================================================*\
    * Parallax Elements
   \*======================================================*/
+  .moon-wrapper {
+    height: 0px;
+  }
+
   .moon {
     background: url("/images/moon.png") no-repeat top center;
     -webkit-background-size: contain;
@@ -181,7 +185,7 @@ $icon-font-path: '../fonts/';
     -o-background-size: contain;
     background-size: contain;
     width: 100%;
-    height: 512px;
+    height: 800px;
     color: white;
   }
 
