--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -795,7 +795,8 @@ $icon-font-path: '../fonts/';
   }
 
   #mountains-image {
-    position: fixed;
+    position: absolute;
+    bottom: 0px;
     z-index: -3;
     width: 200vw;
     left: -50vw;
@@ -805,10 +806,23 @@ $icon-font-path: '../fonts/';
   }
 
   #campfire-video {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+  }
+
+  .campfire-video-offset {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .campfire-video-container {
     position: fixed;
     z-index: -2;
     width: 200vw;
     left: -50vw;
     bottom: 0px;
+    height: 100%;
   }
 }
