--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -111,21 +111,21 @@ $icon-font-path: '../fonts/';
 
   .quote-orange {
     color: #ff9900;
-    font-size: 20px;
+    font-size: 24px;
     font-family: "Oswald", san-serif;
     font-weight: 100;
   }
 
   .quote-blue {
     color: #0099ff;
-    font-size: 20px;
+    font-size: 32px;
     font-family: "Oswald", san-serif;
     font-weight: 100;
   }
 
   .quote-yellow {
     color: #ffc94c;
-    font-size: 20px;
+    font-size: 24px;
     font-family: "Oswald", san-serif;
     font-weight: 100;
   }
@@ -147,6 +147,12 @@ $icon-font-path: '../fonts/';
     content: "";
     display: table;
     clear: both;
+  }
+
+  .content-centered {
+    max-width: 968px;
+    margin: 0 auto;
+    position: relative;
   }
 
   /*======================================================*\
@@ -209,7 +215,7 @@ $icon-font-path: '../fonts/';
    * Parallax Triggers
   \*======================================================*/
   #section-contact-trigger {
-    height: 1200px;
+    height: 400px;
   }
 
   #section-story-type-trigger {
@@ -243,12 +249,13 @@ $icon-font-path: '../fonts/';
     opacity: 0;
 
     position: fixed;
-    top: 10%;
     color: white;
     left: 50%;
     width: 200px;
     margin-left: -100px;
     text-align: center;
+
+    top: 60px;
 
     @include transition(opacity 1s ease-in-out);
   }
@@ -289,16 +296,11 @@ $icon-font-path: '../fonts/';
     display: none;
   }
 
-  .wrapper {
-    width: 60%;
-    margin: auto;
-  }
-
   .btn {
     border: .1em solid white;
     padding: 1em 1.5em;
     display: inline-block;
-    font-size: 1em;
+    font-size: 1.5em;
     color: white;
     text-decoration: none;
     cursor: pointer;
@@ -312,21 +314,24 @@ $icon-font-path: '../fonts/';
     left: 2em;
   }
 
-  %section {
+  .section {
     position: fixed;
     z-index: 1;
     width: 100%;
-    bottom: 0px;
+    margin: 0px;
+    padding: 0px;
   }
 
-  %section-child {
+  .section-child {
     position: fixed;
     top: 1000px;
-    left: 50%;
-    margin-left: -45%;
     opacity: 0;
-    width: 90%;
-    height: 400px;
+    width: 100%;
+    -webkit-transform-origin: 50% top;
+    -moz-transform-origin: 50% top;
+    -ms-transform-origin: 50% top;
+    -o-transform-origin: 50% top;
+    transform-origin: 50% top;
   }
 
   //-------------------------------------
@@ -347,7 +352,7 @@ $icon-font-path: '../fonts/';
       order: 2;
       @include flex-container;
       flex-flow: row wrap;
-      padding-top: 9em;
+      padding-top: 200px;
       #contact-text {
         font-size: 22px;
         flex: 1 100%;
@@ -401,6 +406,8 @@ $icon-font-path: '../fonts/';
       .quote-attrib {
         margin: 0.5em 0em;
       }
+
+      padding-top: 200px;
     }
   }
 
@@ -428,7 +435,7 @@ $icon-font-path: '../fonts/';
 
       .main {
         line-height: 2.5em;
-        margin: 2em 0em 4em;
+        margin: 2em 0em 3em;
         font-size: 14px;
       }
     }
@@ -465,55 +472,61 @@ $icon-font-path: '../fonts/';
   }
 
   #section-workshop-child {
-    @include flex-container;
-
     @extend %section-child;
-    text-align: left;
 
-    #work-right {
-      flex: 1;
-      order: 2;
-      padding: 1em;
-      h1 {
-        font-size: 38px;
-        line-height: 110%;
-        font-weight: 500;
-        margin: 0em 0em;
+    #section-workshop-flex {
+      @include flex-container;
+
+      max-width: 1024px;
+      margin: 0 auto;
+      text-align: left;
+
+      #work-right {
+        flex: 1;
+        order: 2;
+        padding: 1em;
+        h1 {
+          font-size: 38px;
+          line-height: 110%;
+          font-weight: 500;
+          margin: 0em 0em;
+        }
+
+        .main {
+          line-height: 2.5em;
+          margin: 2em 0em 2em;
+          font-size: 14px;
+        }
+
+        a {
+          align-self: flex-end;
+        }
       }
 
-      .main {
-        line-height: 2.5em;
-        margin: 2em 0em 2em;
-        font-size: 14px;
-      }
+      #work-left {
+        flex: 1;
+        order: 1;
+        padding: 1em;
 
-      a {
-        align-self: flex-end;
-      }
-    }
-    #work-left {
-      flex: 1;
-      order: 1;
-      padding: 1em;
+        #workshop-quote {
+          margin: 4em 0em 3em;
+          .quote {
+            position: relative;
+            text-align: center;
+            .quote-text {
+              margin: auto;
+              max-width: 11em;
+            }
+          }
 
-      #workshop-quote {
-        margin: 4em 0em 3em;
-        .quote {
-          position: relative;
-          text-align: center;
-          .quote-text {
-            margin: auto;
-            max-width: 11em;
+          .quote-attrib {
+            margin: 0.5em 0em;
           }
         }
 
-        .quote-attrib {
-          margin: 0.5em 0em;
+        img {
+          width: 100%;
         }
-      }
-
-      img {
-        width: 100%;
       }
     }
   }
@@ -528,6 +541,9 @@ $icon-font-path: '../fonts/';
   #section-work-child {
     @extend %section-child;
     text-align: left;
+    width: 75%;
+    left: 12.5%;
+    margin-left: 0;
 
     @include flex-container;
 
@@ -542,10 +558,11 @@ $icon-font-path: '../fonts/';
         flex: 2;
         padding: 1em;
         h1 {
-          font-size: 38px;
+          font-size: 42px;
           line-height: 110%;
           font-weight: 500;
           margin: 0em 0em 0.5em 0em;
+          margin: 0px;
         }
       }
 
@@ -618,71 +635,61 @@ $icon-font-path: '../fonts/';
 
   #section-approach-child {
     @extend %section-child;
-    text-align: center;
+  }
 
+  #section-approach-flex {
     @include flex-container;
-    flex-flow: column;
-    width: 100%;
-    margin-left: -50%;
+  }
 
-    #approach-main {
-      //width: 48%;
-      flex: 1;
-      order: 1;
-      background-color: rgba(28, 172, 239, 0.5);
+  #approach-main {
+    background-color: rgba(28, 172, 239, 0.5);
 
-      h1 {
-        font-size: 24px;
-        line-height: 110%;
-        font-weight: 500;
-        margin: 0em 0em;
-      }
+    h1 {
+      font-size: 24px;
+      line-height: 110%;
+      font-weight: 500;
+      margin: 0em 0em;
+    }
 
-      .main {
-        line-height: 2em;
-        margin: 1em 1em 2em;
-        font-size: 12px;
-        text-align: left;
+    .main {
+      line-height: 2em;
+      margin: 1em 1em 2em;
+      font-size: 12px;
+      text-align: left;
+    }
+  }
+
+  #approach-reel {
+    img {
+      width: 100%;
+    }
+  }
+
+  #approach-quote {
+    background-color: white;
+    padding: 1em 0em;
+
+    .quote {
+      position: relative;
+      text-align: center;
+      margin: 0em;
+      .quote-text {
+        margin: auto;
+        max-width: 18em;
+        color: #0099ff;
+        font-size: 16px;
+        font-family: "Oswald", san-serif;
+        font-weight: 100;
       }
     }
 
-    #approach-reel {
-      //width: 50%;
-      flex: 1;
-      order: 3;
-      img {
-        width: 100%;
-      }
+    .quote-attrib {
+      margin: 0.3em 0em 0.2em;
+      color: grey;
+      font-size: 12px;
     }
-
-    #approach-quote {
-      flex: 1;
-      order: 2;
-      background-color: white;
-      padding: 1em 0em;
-
-      .quote {
-        position: relative;
-        text-align: center;
-        margin: 0em;
-        .quote-text {
-          margin: auto;
-          max-width: 18em;
-          color: black;
-          font-size: 16px;
-          font-family: "Oswald", san-serif;
-          font-weight: 100;
-        }
-      }
-
-      .quote-attrib {
-        margin: 0.3em 0em 0.2em;
-        color: grey;
-        font-size: 12px;
-      }
-      .white-line {
-        background-color: DimGray;
-      }
+    .white-line {
+      background-color: DimGray;
     }
   }
 
@@ -735,36 +742,23 @@ $icon-font-path: '../fonts/';
   // section-campfire
   //-------------------------------------
   #section-campfire {
-    position: fixed;
-    margin: 0px;
-    padding: 0px;
-    z-index: 2;
   }
 
   #section-campfire-child {
-    position: fixed;
-    left: 50%;
-    margin-left: -45%;
-    opacity: 0;
-    width: 90%;
-    height: 90%;
-    min-height: 400px;
+    height:700px;
+  }
+
+  #section-campfire-flex {
   }
 
   #campfire-wrapper {
-    @extend .wrapper;
-
     position: absolute;
-    bottom: 60%;
-    right: 0%;
-    margin-left: -30em;
+    top: 230px;
     width: 100%;
     text-align: center;
 
     h1 {
       font-size: 20px;
-      margin: 0em auto;
-      max-width: 90%;
       font-weight: 100;
       font-family: "roboto-light", san-serif;
     }
