--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -255,14 +255,14 @@ $icon-font-path: '../fonts/';
     margin-left: -100px;
     text-align: center;
 
-    top: 60px;
+    top: 40px;
 
     @include transition(opacity 1s ease-in-out);
   }
 
   .scroll-up img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
   }
 
   .scroll-up-show {
@@ -308,6 +308,10 @@ $icon-font-path: '../fonts/';
     }
   }
 
+  .btn:hover {
+    background-color: rgba(255,255,255,0.3);
+  }
+
   #section-header {
     position: fixed;
     top: 2em;
@@ -342,75 +346,88 @@ $icon-font-path: '../fonts/';
   }
 
   #section-contact-child {
-    @include flex-container;
-
     @extend %section-child;
     text-align: left;
+  }
 
-    #contact-right {
-      flex: 1;
-      order: 2;
+  #section-contact-flex {
+    @include flex-container;
+  }
+
+  #contact-right {
+    flex: 1;
+    order: 2;
+    @include flex-container;
+    flex-flow: row wrap;
+    padding-top: 200px;
+    max-width: 500px;
+
+    #contact-text {
+      font-size: 22px;
+      flex: 1 100%;
+    }
+
+    .line {
+      flex: 1 100%;
+      border-bottom: solid white 1px;
+      margin: 1em 0em;
+    }
+
+    #contact-fields {
+      flex: 1 1 60%;
       @include flex-container;
+      justify-content: flex-end;
       flex-flow: row wrap;
-      padding-top: 200px;
-      #contact-text {
+
+      input[type=text] {
+        border: none;
+        padding: 8px;
         font-size: 22px;
         flex: 1 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        margin: 0.2em 0em;
       }
+
       .line {
         flex: 1 100%;
         border-bottom: solid white 1px;
-        margin: 1em 0em;
+        margin: 1.8em 0em 2em;
       }
-      #contact-fields {
-        flex: 1 1 50%;
-        @include flex-container;
-        justify-content: flex-end;
-        flex-flow: row wrap;
-        input {
-          flex: 1 100%;
-          width: 100%;
-          -webkit-box-sizing: border-box;
-          -moz-box-sizing: border-box;
-          box-sizing: border-box;
-          margin: 0.2em 0em;
-        }
-        .line {
-          flex: 1 100%;
-          border-bottom: solid white 1px;
-          margin: 1.8em 0em 2em;
-        }
-        a {
-          display: block;
-        }
-      }
-      #contact-info {
-        flex: 1 1 45%;
-        margin-left: 1em;
-        a {
-          color: white;
-        }
+
+      a {
+        display: block;
       }
     }
 
-    #contact-quote {
-      flex: 1;
-      order: 1;
-      .quote {
-        position: relative;
-        text-align: center;
-        margin: 1em auto;
-        max-width: 27em;
+    #contact-info {
+      flex: 1 1 35%;
+      margin-left: 5%;
+      font-size: 18px;
+      line-height: 2em;
+      a {
+        color: white;
       }
-
-      .quote-attrib {
-        margin: 0.5em 0em;
-      }
-
-      padding-top: 200px;
     }
   }
 
+  #contact-quote {
+    flex: 1;
+    order: 1;
+    .quote {
+      position: relative;
+      text-align: center;
+      margin: 1em auto;
+      max-width: 27em;
+    }
+
+    .quote-attrib {
+      margin: 0.5em 0em;
+    }
+
+    padding-top: 200px;
+  }
 
   //-------------------------------------
   // section-story-type
@@ -648,7 +665,7 @@ $icon-font-path: '../fonts/';
       font-size: 24px;
       line-height: 110%;
       font-weight: 500;
-      margin: 0em 0em;
+      margin: 1em 0em;
     }
 
     .main {
@@ -774,13 +791,13 @@ $icon-font-path: '../fonts/';
     #btn-find-story {
       position: absolute;
       left: 0;
-      margin-top: 4em;
+      top: 200px;
     }
 
     #btn-telling-it {
       position: absolute;
       right: 0;
-      margin-top: 4em;
+      top: 200px;
     }
   }
 
