Fix section links for multiple browsers

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -214,30 +214,30 @@ $icon-font-path: '../fonts/';
   /*======================================================*\
    * Parallax Triggers
   \*======================================================*/
-  #section-contact-trigger {
+  #contact {
     height: 1200px;
   }
 
-  #section-story-type-trigger {
+  #story {
     height: 1200px;
   }
 
-  #section-workshop-trigger {
+  #workshop {
     height: 1200px;
   }
 
-  #section-work-trigger {
+  #work {
     height: 1200px;
   }
 
-  #section-approach-trigger {
+  #approach {
     height: 1200px;
   }
-  #section-about-trigger {
+  #about {
     height: 1200px;
   }
 
-  #section-campfire-trigger {
+  #campfire {
     height: 1200px;
   }
 
