Add video replacement image and update first section for mobile

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -237,7 +237,7 @@ $icon-font-path: '../fonts/';
     top: 200px;
   }
 
-  #mountains-image {
+  #mountains-image, #campfire-image {
     width: 100%;
     left: 0;
   }
