--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -879,7 +879,7 @@ $icon-font-path: '../fonts/';
     }
     .content {
       font-size: 16px;
-      text-align: justify;
+      text-align: left;
       line-height: 2em;
       margin: 2em;
     }
@@ -983,6 +983,49 @@ $icon-font-path: '../fonts/';
       font-size: 18px;
 
       .brand-example {
+        flex: 1;
+        margin: 0.6em;
+        a {
+          color: white;
+        }
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  //-------------------------------------
+  // section-design
+  //-------------------------------------
+  #subsection-design {
+    display: none;
+    padding: 4em 0em;
+
+    h1 {
+      max-width: 8em;
+      margin: auto;
+    }
+
+    .quote-blue {
+      margin: auto;
+    }
+
+    #design-callout {
+      text-align: left;
+      font-size: 18px;
+      font-weight: 400;
+      margin: 3em 0em 0em 0.6em;
+    }
+    .design-examples-row {
+      @include flex-container;
+      flex-flow: row nowrap;
+      justify-content: center;
+      margin: auto;
+      max-width: 64em;
+      font-size: 18px;
+
+      .design-example {
         flex: 1;
         margin: 0.6em;
         a {
