--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -905,14 +905,35 @@ $icon-font-path: '../fonts/';
       width: 75px;
       margin: 2em;
     }
+
+    .callout {
+      text-align: left;
+      font-size: 18px;
+      font-weight: 400;
+      margin: 3em 0em 0em 0.6em;
+    }
+
+    .examples-row {
+      @include flex-container;
+      flex-flow: row nowrap;
+      justify-content: center;
+      margin: auto;
+      max-width: 64em;
+      font-size: 18px;
+      .example {
+        flex: 1;
+        margin: 0.6em;
+        img {
+          width: 100%;
+        }
+      }
+    }
   }
 
   //-------------------------------------
   // section-music
   //-------------------------------------
   #subsection-music {
-    display: none;
-    padding: 4em 0em;
 
     .music-girl {
       width: 100px;
@@ -928,8 +949,6 @@ $icon-font-path: '../fonts/';
   // section-video
   //-------------------------------------
   #subsection-video {
-    display: none;
-    padding: 4em 0em;
 
     .sizzle-reel {
       width: 350px;
@@ -940,29 +959,9 @@ $icon-font-path: '../fonts/';
       margin: auto;
     }
 
-    #video-callout {
-      text-align: left;
-      font-size: 18px;
-      font-weight: 400;
-      margin-left: 0.6em;
-    }
     .video-examples-row {
-      @include flex-container;
-      flex-flow: row nowrap;
-      justify-content: center;
-      margin: auto;
-      max-width: 64em;
-      font-size: 18px;
-
       .video-example {
-        flex: 1;
-        margin: 0.6em;
-        a {
-          color: white;
-        }
-        img {
-          width: 100%;
-        }
+
       }
     }
   }
@@ -971,8 +970,6 @@ $icon-font-path: '../fonts/';
   // section-branding
   //-------------------------------------
   #subsection-branding {
-    display: none;
-    padding: 4em 0em;
 
     h1 {
       max-width: 8em;
@@ -985,22 +982,10 @@ $icon-font-path: '../fonts/';
     }
 
     .brand-examples-row {
-      @include flex-container;
-      flex-flow: row nowrap;
-      justify-content: center;
       margin: 4em auto 2em;
-      max-width: 64em;
-      font-size: 18px;
 
       .brand-example {
-        flex: 1;
-        margin: 0.6em;
-        a {
-          color: white;
-        }
-        img {
-          width: 100%;
-        }
+
       }
     }
   }
@@ -1009,8 +994,6 @@ $icon-font-path: '../fonts/';
   // section-design
   //-------------------------------------
   #subsection-design {
-    display: none;
-    padding: 4em 0em;
 
     h1 {
       max-width: 8em;
@@ -1021,29 +1004,9 @@ $icon-font-path: '../fonts/';
       margin: auto;
     }
 
-    #design-callout {
-      text-align: left;
-      font-size: 18px;
-      font-weight: 400;
-      margin: 3em 0em 0em 0.6em;
-    }
     .design-examples-row {
-      @include flex-container;
-      flex-flow: row nowrap;
-      justify-content: center;
-      margin: auto;
-      max-width: 64em;
-      font-size: 18px;
-
       .design-example {
-        flex: 1;
-        margin: 0.6em;
-        a {
-          color: white;
-        }
-        img {
-          width: 100%;
-        }
+
       }
     }
   }
@@ -1052,8 +1015,6 @@ $icon-font-path: '../fonts/';
   // section-digital
   //-------------------------------------
   #subsection-digital {
-    display: none;
-    padding: 4em 0em;
 
     #digital-image {
       width: 100%;
@@ -1067,29 +1028,9 @@ $icon-font-path: '../fonts/';
       margin: auto;
     }
 
-    #digital-callout {
-      text-align: left;
-      font-size: 18px;
-      font-weight: 400;
-      margin: 3em 0em 0em 0.6em;
-    }
     .digital-examples-row {
-      @include flex-container;
-      flex-flow: row nowrap;
-      justify-content: center;
-      margin: auto;
-      max-width: 64em;
-      font-size: 18px;
-
       .digital-example {
-        flex: 1;
-        margin: 0.6em;
-        a {
-          color: white;
-        }
-        img {
-          width: 100%;
-        }
+
       }
     }
   }
@@ -1126,7 +1067,6 @@ $icon-font-path: '../fonts/';
   // section-content
   //-------------------------------------
   #subsection-content {
-    display: none;
     padding: 0em 0em 4em;
     
     .subsection-banner {
@@ -1153,8 +1093,6 @@ $icon-font-path: '../fonts/';
   // section-broadcast
   //-------------------------------------
   #subsection-broadcast {
-    display: none;
-    padding: 4em 0em;
     
     #broadcast-image {
       width: 450px;
@@ -1173,29 +1111,9 @@ $icon-font-path: '../fonts/';
       margin: auto;
     }
 
-    #broadcast-callout {
-      text-align: left;
-      font-size: 18px;
-      font-weight: 400;
-      margin: 3em 0em 0em 0.6em;
-    }
     .broadcast-examples-row {
-      @include flex-container;
-      flex-flow: row nowrap;
-      justify-content: center;
-      margin: auto;
-      max-width: 64em;
-      font-size: 18px;
-
       .broadcast-example {
-        flex: 1;
-        margin: 0.6em;
-        a {
-          color: white;
-        }
-        img {
-          width: 100%;
-        }
+
       }
     }
   }
@@ -1204,7 +1122,6 @@ $icon-font-path: '../fonts/';
   // section-workshop
   //-------------------------------------
   #subsection-workshop-detail {
-    display: none;
     padding: 0em 0em 4em;
     
 
@@ -1242,12 +1159,6 @@ $icon-font-path: '../fonts/';
       margin: auto;
     }
 
-    #workshop-callout {
-      text-align: left;
-      font-size: 18px;
-      font-weight: 400;
-      margin: 3em 0em 0em 0.6em;
-    }
     #contact-section {
       flex: 1 70%;
       order: 2;
@@ -1281,9 +1192,6 @@ $icon-font-path: '../fonts/';
         text-align: left;
         font-size: 18px;
         line-height: 2em;
-        a {
-          color: white;
-        }
       }
     }
   }
