--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -873,6 +873,7 @@ $icon-font-path: '../fonts/';
     width: 100%;
     height: 100%;
     overflow: scroll;
+    display: none;
   }
 
   .subsection-child {
