--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -133,7 +133,12 @@ $icon-font-path: '../fonts/';
     }
   }
 
-  #approach-reel {
+  #approach-flex-mobile-wrapper {
+    display: none;
+  }
+
+  #approach-reel-desktop {
+    display: block;
     width: 48%;
     padding-left: 2%;
     float: right;
@@ -142,10 +147,11 @@ $icon-font-path: '../fonts/';
     flex: none;
     img {
       width: 100%;
+      max-width: none;
     }
   }
 
-  #approach-quote {
+  #approach-quote-desktop {
     float: left;
     display: block;
     background-color: inherit;
