Create mobile menu

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -42,6 +42,14 @@ $icon-font-path: '../fonts/';
     height: 120px;
   }
 
+
+  /*======================================================*\
+   * Menu
+  \*======================================================*/
+  .open-menu {
+    display: none;
+  }
+
   /*======================================================*\
    * Page css
   \*======================================================*/
@@ -53,7 +61,6 @@ $icon-font-path: '../fonts/';
   .narrator-logo-small {
     position: absolute;
     top: 10%;
-    left: 10%;
     height: 2em;
     width: 2.4em;
     display: block;
